--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,9 @@
 .headerMainContent {
-    font: 400 1em/1.5 "Neuton";
-    background: rgba(9,13,0 , 0.25) !important;
+    font: 400 1.3rem "Neuton";
+    background: rgba(9,13,0 , 0.25) !important; /*251, 189, 8*/
     /*color: rgba(255, 255, 255, 0.25);*/
     text-align: center;
-    height: 100vh;
+    height: 80vh;
 }
 .animationContainer {
     position: relative;
@@ -11,23 +11,23 @@
 }
 .animationContainer .animationPart {
     text-transform: uppercase;
-    letter-spacing: .5em;
+    letter-spacing: .6rem;
     display: inline-block;
     border: 4px double rgba(255, 255, 255, 0.75);
     border-width: 4px 0;
-    padding: 1.5em 0em;
+    padding: 1.5rem 0rem;
     position: absolute;
     top: 30%;
     /*left: 50%;*/
     /*margin-right: -50%;*/
-    /*transform: translate(-50%, -50%);*/
-    width: 40em;
-    margin: 0 0 0 -20em;
+    transform: translate(-50%, 0%);
+    width: 40%;
+    /*margin: 0 0 0 -20em;*/
 }
 .animationPart .animationText {
-    font: 700 4em/1 "Oswald", sans-serif;
+    font: 700 5rem "Oswald", sans-serif;
     letter-spacing: 0;
-    padding: .25em 0 .325em;
+    padding: .25rem 0 .325rem;
     display: block;
     margin: 0 auto;
     text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
@@ -55,8 +55,6 @@
 }
 
 .menu {
-    /*position: fixed;*/
-    /*width: 100%;*/
     display: flex;
     justify-content: space-evenly;
     margin: 0 !important;
@@ -64,4 +62,9 @@
 .menuItems {
     display: flex;
     align-items: center;
+}
+.headerDescription {
+    width: 40%;
+    margin: 0 auto;
+    line-height: 1.7;
 }
