--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,7 +1,6 @@
 .headerMainContent {
     font: 400 1.3rem "Neuton";
-    background: rgba(9,13,0 , 0.25) !important; /*251, 189, 8*/
-    /*color: rgba(255, 255, 255, 0.25);*/
+    background: rgba(9,13,0 , 0.15); /*251, 189, 8*/
     text-align: center;
     height: 80vh;
 }
@@ -15,14 +14,11 @@
     display: inline-block;
     border: 4px double rgba(255, 255, 255, 0.75);
     border-width: 4px 0;
-    padding: 1.5rem 0rem;
+    padding: 1.5rem 0;
     position: absolute;
     top: 30%;
-    /*left: 50%;*/
-    /*margin-right: -50%;*/
     transform: translate(-50%, 0%);
     width: 40%;
-    /*margin: 0 0 0 -20em;*/
 }
 .animationPart .animationText {
     font: 700 5rem "Oswald", sans-serif;
@@ -57,7 +53,6 @@
 .menu {
     display: flex;
     justify-content: space-evenly;
-    margin: 0 !important;
 }
 .menuItems {
     display: flex;
