--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -58,8 +58,8 @@
     display: flex;
     align-items: center;
 }
-.headerDescription {
+/* .headerDescription {
     width: 40%;
     margin: 0 auto;
     line-height: 1.7;
-}
+} */
