--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -78,6 +78,9 @@
     display: flex;
     align-items: center;
 }
+.ui.menu .item>i.dropdown.icon {
+    margin: 0 0 0 auto !important;
+}
 @media (max-width: 550px)  {
     .menu.menu    {
         justify-content: space-between;
