--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -113,6 +113,7 @@
     }
     .animationContainer .animationPart {
         width: 300px;
+        top: 110px;
     }
     .animationPart .animationText {
         font-size: 3.5rem;
