--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -8,7 +8,7 @@
     padding-top: 80px;
 }
 .animationContainer {
-    position: relative;
+    /*position: relative;*/
     height: 40vh;
 }
 .companyDescription {
@@ -35,17 +35,20 @@
     padding: .25rem 0 .325rem;
     display: block;
     margin: 0 auto;
-    text-shadow: 0 0 80px rgba(255, 255, 255, 0.5);
+    text-shadow: 0px 2px 3px rgba(255,255,255,0.5);
+    /*box-shadow: inset 0 0 10px rgba(0,0,0,0.5);*/
     /* Clip Background Image */
     background: url(../../animated_text_fill.png) repeat-y;
     -webkit-background-clip: text;
+    -moz-background-clip: text;
     background-clip: text;
     /* Animate Background Image */
-    -webkit-text-fill-color: transparent;
+    /*-webkit-text-fill-color: transparent;*/
+    color: rgba(0,0,0,.23);
     animation: aitf 80s linear infinite ;
     -webkit-animation: aitf 80s linear infinite ;
     /* Activate hardware acceleration for smoother animations */
-    -webkit-transform: translate3d(0, 0, 0);
+    /*-webkit-transform: translate3d(0, 0, 0);*/
     -webkit-backface-visibility: hidden;
 }
 
@@ -132,12 +135,11 @@
     }
 }
 
-@media (orientation: landscape) {
-    .headerMainContent {
-        padding-top: 0;
-    }
+@media (orientation: landscape) and (max-width: 900px) {
+    /*.headerMainContent {*/
+    /*    padding-top: 0;*/
+    /*}*/
     .companyDescription {
-        padding-top: 50vh;
-        padding-bottom: 80px;
+        padding-top: 235px;
     }
 }
